tests/snapshots/errors/asm_call_forbidden.mc
// Test Call instruction is forbidden
asm {
    __emit("Call", 0, 0);
};
